trying to fix scrolling on ios

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,7 +35,6 @@ p {
 body {
 	font-size: 12px;
 	font-family: Helvetica;
-	height: 100%;
 	width: 100%;
 	color: $gold;
 }
